# pascal-compiler

./: .directory  CMakeLists.txt  README.md  main.c
include/: ast.h  error.h  hash.h  hashmap.h  lexer.h  parser.h  repl.h  token.h  winfuncs.h
src/: CMakeLists.txt  ast.c  error.c  hash.c  hashmap.c  lexer.c  parser.c  repl.c  token.c  winfuncs.c
